fix whitespace on hot games

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -446,8 +446,6 @@ span.shelf
 
 .hidden
   display: none
-.justify
-  text-align: justify
 
 .sx250
   max-width: 250px
